# rectangle_analyzer

./: README.md  pyproject.toml  rectangle_analyzer.py  test_rectangles.py
