[project]
name = "rectangle-packing-analyzer"
version = "0.1.0"
description = "Tool that analyzes rectangles placed on a 2D plane"
authors = [
    {name = "Tomas Dendis",email = "tomas.dendis@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"